# stock-markets-analytics-zoomcamp

./: .gitignore  pyproject.toml
hw1/: hw1.ipynb
hw2/: hw2.ipynb
hw3/: hw3.ipynb
